# Car_price_perdiction

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  app.py  application.py  pyproject.toml  req.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
Jupyter/: jupyter_notebook.ipynb
archieve/: model.pkl  preprocessor.pkl  raw.csv  test.csv  test_scaled.csv  train.csv  train_scaled.csv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: logger.py  utils.py
src/components/: __init__.py  ingestion.py  model_training.py  transformation.py
src/prediction/: predict_pipeline.py
templates/: home.html
tests/: __init__.py  test_crypto_liquidation.py
